--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,33 +27,7 @@ build:
   - docker
   script:
   - make build
+  - make verify push IMAGE_TAGS="$IMAGE_PER_BRANCH"
   except:
-  - master
   - tags
 
-develop_push:
-  tags:
-  - docker
-  script:
-  - mkdir -p ~/.docker && echo "${DOCKER_AUTH_CONFIG}" > ~/.docker/config.json && chmod 600 ~/.docker/config.json
-  - make verify push IMAGE_TAGS="${CI_BUILD_REF_SLUG}-${CI_PIPELINE_ID}"
-  only:
-  - develop
-
-master_push:
-  tags:
-  - docker
-  script:
-  - mkdir -p ~/.docker && echo "${DOCKER_AUTH_CONFIG}" > ~/.docker/config.json && chmod 600 ~/.docker/config.json
-  - make verify push IMAGE_TAGS="${CI_BUILD_REF_SLUG}-${CI_PIPELINE_ID} canary"
-  only:
-  - master
-
-release_push:
-  tags:
-  - docker
-  script:
-  - mkdir -p ~/.docker && echo "${DOCKER_AUTH_CONFIG}" > ~/.docker/config.json && chmod 600 ~/.docker/config.json
-  - APP_VERSION=${CI_COMMIT_TAG} make verify push IMAGE_TAGS="${CI_COMMIT_TAG} latest"
-  only:
-  - tags
