--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,8 +26,7 @@ build:
   tags:
   - docker
   script:
-  - make build
-  - make push IMAGE_TAGS="$IMAGE_PER_BRANCH"
+  - make push IMAGE_TAGS="${IMAGE_PER_BRANCH}"
   except:
   - tags
 
