--- a/contrib/charts/cert-manager/values.yaml
+++ b/contrib/charts/cert-manager/values.yaml
@@ -5,7 +5,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/jetstack/cert-manager-controller
-  tag: v0.2.2
+  tag: v0.2.3
   pullPolicy: Always
 
 createCustomResource: true
@@ -17,6 +17,9 @@ resources:
   requests:
     cpu: 10m
     memory: 32Mi
+
+# Optional additional arguments for cert-manager
+extraArgs: []
 
 ingressShim:
   enabled: true
@@ -30,5 +33,5 @@ ingressShim:
     repository: quay.io/jetstack/cert-manager-ingress-shim
     # Defaults to image.tag.
     # You should only change this if you know what you are doing!
-    # tag: v0.2.2
+    # tag: v0.2.3
     pullPolicy: Always
